--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -284,7 +284,7 @@ iframe {
     font-size: 10px
 }
 
-.container {
+.container-main {
     background-color: white;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
 }
