--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,8 @@
           crossorigin="anonymous"/>
     <link rel="stylesheet" href="{{ cdn_veaf }}/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/custom.css">
-    <link rel="icon" type="image/ico" href="/img/favicon.ico" />.
+    <link rel="icon" type="image/ico" href="/img/favicon.ico"/>
+    .
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
             integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
             crossorigin="anonymous"></script>
@@ -30,168 +31,183 @@
 </head>
 <body>
 {% block body %}
-<div class="container pt-3">
     {% block header %}
-    <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
-            <a href="/" class="navbar-brand">Accueil</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a href="/" class="nav-link">Les nouvelles</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="https://community.veaf.org/" class="nav-link">Forum</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="association">Association
-                            <span class="caret"></span></a>
-                        <div class="dropdown-menu" aria-labelledby="association">
-                            <a class="dropdown-item" href="/association/presentation-association">Présentation</a>
-                            <!--                        <div class="dropdown-divider"></div>-->
-                            <a class="dropdown-item" href="/association/le-bureau">Le bureau</a>
-                            <a class="dropdown-item" href="/association/status">Les statuts</a>
-                            <a class="dropdown-item" href="/association/reglement-interieur">Règlement intérieur</a>
-                            <a class="dropdown-item" href="https://community.veaf.org/topic/21/nous-rejoindre">Rejoindre
-                                l'association</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="webstv">Webs TV <span
-                                    class="caret"></span></a>
-                        <div class="dropdown-menu" aria-labelledby="webstv">
-                            <a class="dropdown-item" href="http://www.youtube.com/user/AssociationVEAF/">
-                                Chaîne Youtube VEAF
-                            </a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="webstv">Serveurs<span
-                                    class="caret"></span></a>
-                        <div class="dropdown-menu" aria-labelledby="webstv">
-                            <a class="dropdown-item" href="{{ path("perun_index") }}">
-                                Serveurs DCS
-                            </a>
-                        </div>
-                    </li>
-                </ul>
+        <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
+            <div class="container">
+                <a href="/" class="navbar-brand">Accueil</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a href="/" class="nav-link">Les nouvelles</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="https://community.veaf.org/" class="nav-link">Forum</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="association">Association
+                                <span class="caret"></span></a>
+                            <div class="dropdown-menu" aria-labelledby="association">
+                                <a class="dropdown-item" href="/association/presentation-association">Présentation</a>
+                                <!--                        <div class="dropdown-divider"></div>-->
+                                <a class="dropdown-item" href="/association/le-bureau">Le bureau</a>
+                                <a class="dropdown-item" href="/association/status">Les statuts</a>
+                                <a class="dropdown-item" href="/association/reglement-interieur">Règlement intérieur</a>
+                                <a class="dropdown-item" href="https://community.veaf.org/topic/21/nous-rejoindre">Rejoindre
+                                    l'association</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="webstv">Webs TV
+                                <span
+                                        class="caret"></span></a>
+                            <div class="dropdown-menu" aria-labelledby="webstv">
+                                <a class="dropdown-item" href="http://www.youtube.com/user/AssociationVEAF/">
+                                    Chaîne Youtube VEAF
+                                </a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"
+                               id="webstv">Serveurs<span
+                                        class="caret"></span></a>
+                            <div class="dropdown-menu" aria-labelledby="webstv">
+                                <a class="dropdown-item" href="{{ path("perun_index") }}">
+                                    Serveurs DCS
+                                </a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     {% endblock header %}
+    <div class="container container-main pt-3">
 
-    {% block pageContent %}
-        <div class="row mb-3">
-            <div class="col-lg-12">
-                <img src="{{ cdn_veaf }}/img/test_banniere_1.jpg" class="embed-responsive">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <p class="text-center">Bienvenue sur le site Internet de la</p>
-                <p class="text-center"><img src="{{ cdn_veaf }}/img/Logo_veaf.png"></p>
-                <p class="text-center display-4">Virtual European Air Force.</p>
-            </div>
-        </div>
-        <div class="row mb-5">
-            <div class="col-md-3">
-                <div class="card border-primary mb-2" style="max-width: 20rem;">
-                    <div class="card-header">F-16C</div>
-                    <img src="{{ cdn_veaf }}/img/f-16c.jpg" class="img-fluid">
-                </div>
-                <div class="card border-primary mb-2" style="max-width: 20rem;">
-                    <div class="card-header">M-2000C</div>
-                    <img src="{{ cdn_veaf }}/img/m-2000c.jpg" class="img-fluid">
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="lg-12">
-                    <img src="{{ cdn_veaf }}/img/veaf-passion.png" class="img-fluid">
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card border-primary mb-2" style="max-width: 20rem;">
-                    <div class="card-header">KA-50</div>
-                    <img src="{{ cdn_veaf }}/img/ka-50.jpg" class="img-fluid">
-                </div>
-
-                <div class="card border-primary mb-2" style="max-width: 20rem;">
-                    <div class="card-header">UH-1H</div>
-                    <img src="{{ cdn_veaf }}/img/uh-1h.jpg" class="img-fluid">
-                </div>
-            </div>
-        </div>
-        <div class="row mb-3">
-            <div class="col-lg-12">
-                <div class="bs-component">
-                    <div class="jumbotron">
-                        <p class="text-center">
-                            La <b>Virtual European Air Force</b> est une association de personnes passionnées par l'aviation de combat. Cette passion se concrétise au travers de la pratique de la <b>simulation de vol</b>.
-                        </p>
-                        <p class="text-center">
-                            Tout comme dans la "réalité", le "vol", ne se cantonne pas à une prise de manche au milieu du ciel !
-                        </p>
-                        <p class="text-center">
-                            Formation, entraînement, qualification, préparation des opérations, analyse des missions, expérimentation, développement de nouveaux outils, améliorations du simulateur... jalonnent un grand nombre de nos activités.
-                        </p>
-                        <p class="text-center">
-                            Des activités qui animent la vie de notre groupe qui se veut partager des objectifs, valeurs et ambitions communes : la volonté de <b>progresser</b> ensemble, le <b>partage</b> et l'entraide, le respect, l'<b>excellence</b> dans la simulation et le combat avec une pointe acérée de combativité et volonté de vaincre.
-                        </p>
-                        <p class="text-center">
-                            La VEAF aujourd'hui, c'est près d'une quarantaine de personnes des quatres coins de la France et la Belgique, civils et militaires, toujours prêt à en découdre mais aussi à faire découvrir leur passion.
-                        </p>
-                        <p class="text-center">
-                            C'est une <b>aventure des temps modernes</b>... qui ne fait que commencer !
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row mb-4">
-            <div class="col-lg-12">
-                <p>
-                    Pour les vols sur <b>Falcon BMS</b>, nous vous conseillons de rejoindre l'EC05, qui comprend les meilleurs pilotes et instructeurs du domaine (normal, ils viennent de la VEAF ^^)
-                </p>
-                <a href="http://ec05.fr/EC05/"><img src="{{ cdn_veaf }}/img/ec05_logo.png" class="embed-responsive"></a>
-            </div>
-        </div>
-
-        <div class="row mb-1">
-            <div class="col-lg-12">
-                <img src="{{ cdn_veaf }}/img/uh-1h-boat.png" class="img-fluid">
-            </div>
-        </div>
-    {% endblock pageContent %}
-
-    {% block footer %}
-        <footer id="footer">
-            <div class="row mb-2">
-                <div class="col-lg-12 text-center">
-                    Sauf précision contraire, le contenu de ce site est mis à disposition selon les termes<br>
-                    de la
-                    <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/fr/">
-                        Licence Creative Commons Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions 3.0 France.
-                    </a>
+        {% block pageContent %}
+            <div class="row mb-3">
+                <div class="col-lg-12">
+                    <img src="{{ cdn_veaf }}/img/test_banniere_1.jpg" class="embed-responsive">
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3">
-                    © 2004 - 2021 VEAF
-                </div>
-                <div class="col-sm-6">
-                    &nbsp;
-                </div>
-                <div class="col-sm-3 text-right">
-                    Virtual European Air Force
+                <div class="col-lg-12">
+                    <p class="text-center">Bienvenue sur le site Internet de la</p>
+                    <p class="text-center"><img src="{{ cdn_veaf }}/img/Logo_veaf.png"></p>
+                    <p class="text-center display-4">Virtual European Air Force.</p>
                 </div>
             </div>
-        </footer>
-    {% endblock footer %}
-</div>
+            <div class="row mb-5">
+                <div class="col-md-3">
+                    <div class="card border-primary mb-2" style="max-width: 20rem;">
+                        <div class="card-header">F-16C</div>
+                        <img src="{{ cdn_veaf }}/img/f-16c.jpg" class="img-fluid">
+                    </div>
+                    <div class="card border-primary mb-2" style="max-width: 20rem;">
+                        <div class="card-header">M-2000C</div>
+                        <img src="{{ cdn_veaf }}/img/m-2000c.jpg" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="lg-12">
+                        <img src="{{ cdn_veaf }}/img/veaf-passion.png" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card border-primary mb-2" style="max-width: 20rem;">
+                        <div class="card-header">KA-50</div>
+                        <img src="{{ cdn_veaf }}/img/ka-50.jpg" class="img-fluid">
+                    </div>
 
+                    <div class="card border-primary mb-2" style="max-width: 20rem;">
+                        <div class="card-header">UH-1H</div>
+                        <img src="{{ cdn_veaf }}/img/uh-1h.jpg" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+            <div class="row mb-3">
+                <div class="col-lg-12">
+                    <div class="bs-component">
+                        <div class="jumbotron">
+                            <p class="text-center">
+                                La <b>Virtual European Air Force</b> est une association de personnes passionnées par
+                                l'aviation de combat. Cette passion se concrétise au travers de la pratique de la <b>simulation
+                                    de vol</b>.
+                            </p>
+                            <p class="text-center">
+                                Tout comme dans la "réalité", le "vol", ne se cantonne pas à une prise de manche au
+                                milieu du ciel !
+                            </p>
+                            <p class="text-center">
+                                Formation, entraînement, qualification, préparation des opérations, analyse des
+                                missions, expérimentation, développement de nouveaux outils, améliorations du
+                                simulateur... jalonnent un grand nombre de nos activités.
+                            </p>
+                            <p class="text-center">
+                                Des activités qui animent la vie de notre groupe qui se veut partager des objectifs,
+                                valeurs et ambitions communes : la volonté de <b>progresser</b> ensemble, le
+                                <b>partage</b> et l'entraide, le respect, l'<b>excellence</b> dans la simulation et le
+                                combat avec une pointe acérée de combativité et volonté de vaincre.
+                            </p>
+                            <p class="text-center">
+                                La VEAF aujourd'hui, c'est près d'une quarantaine de personnes des quatres coins de la
+                                France et la Belgique, civils et militaires, toujours prêt à en découdre mais aussi à
+                                faire découvrir leur passion.
+                            </p>
+                            <p class="text-center">
+                                C'est une <b>aventure des temps modernes</b>... qui ne fait que commencer !
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mb-4">
+                <div class="col-lg-12">
+                    <p>
+                        Pour les vols sur <b>Falcon BMS</b>, nous vous conseillons de rejoindre l'EC05, qui comprend les
+                        meilleurs pilotes et instructeurs du domaine (normal, ils viennent de la VEAF ^^)
+                    </p>
+                    <a href="http://ec05.fr/EC05/"><img src="{{ cdn_veaf }}/img/ec05_logo.png" class="embed-responsive"></a>
+                </div>
+            </div>
+
+            <div class="row mb-1">
+                <div class="col-lg-12">
+                    <img src="{{ cdn_veaf }}/img/uh-1h-boat.png" class="img-fluid">
+                </div>
+            </div>
+        {% endblock pageContent %}
+
+        {% block footer %}
+            <footer id="footer">
+                <div class="row mb-2">
+                    <div class="col-lg-12 text-center">
+                        Sauf précision contraire, le contenu de ce site est mis à disposition selon les termes<br>
+                        de la
+                        <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/fr/">
+                            Licence Creative Commons Attribution - Pas d’Utilisation Commerciale - Partage dans les
+                            Mêmes Conditions 3.0 France.
+                        </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3">
+                        © 2004 - 2021 VEAF
+                    </div>
+                    <div class="col-sm-6">
+                        &nbsp;
+                    </div>
+                    <div class="col-sm-3 text-right">
+                        Virtual European Air Force
+                    </div>
+                </div>
+            </footer>
+        {% endblock footer %}
+    </div>
 {% endblock body %}
 </body>
 </html>
