fix containers styles

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -3,96 +3,102 @@
 {% block title %}{{ parent() }} - Accueil{% endblock %}
 
 {% block pageContent %}
-    <div class="row mb-3">
-        <div class="col-lg-12">
-            <img src="{{ cdn_veaf }}/img/test_banniere_1.jpg" class="embed-responsive">
+    <div class="container container-main pt-3 pb-3 mb-3">
+        <div class="row mb-3">
+            <div class="col-lg-12">
+                <img src="{{ cdn_veaf }}/img/test_banniere_1.jpg" class="embed-responsive">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <p class="text-center">Bienvenue sur le site Internet de la</p>
+                <p class="text-center"><img src="{{ cdn_veaf }}/img/Logo_veaf.png"></p>
+                <p class="text-center display-4">Virtual European Air Force.</p>
+            </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-lg-12">
-            <p class="text-center">Bienvenue sur le site Internet de la</p>
-            <p class="text-center"><img src="{{ cdn_veaf }}/img/Logo_veaf.png"></p>
-            <p class="text-center display-4">Virtual European Air Force.</p>
-        </div>
-    </div>
-    <div class="row mb-5">
-        <div class="col-md-3">
-            <div class="card border-primary mb-2" style="max-width: 20rem;">
-                <div class="card-header">F-16C</div>
-                <img src="{{ cdn_veaf }}/img/f-16c.jpg" class="img-fluid">
+    <div class="container container-main pt-3 pb-3 mb-3">
+        <div class="row mb-5">
+            <div class="col-md-3">
+                <div class="card border-primary mb-2" style="max-width: 20rem;">
+                    <div class="card-header">F-16C</div>
+                    <img src="{{ cdn_veaf }}/img/f-16c.jpg" class="img-fluid">
+                </div>
+                <div class="card border-primary mb-2" style="max-width: 20rem;">
+                    <div class="card-header">M-2000C</div>
+                    <img src="{{ cdn_veaf }}/img/m-2000c.jpg" class="img-fluid">
+                </div>
             </div>
-            <div class="card border-primary mb-2" style="max-width: 20rem;">
-                <div class="card-header">M-2000C</div>
-                <img src="{{ cdn_veaf }}/img/m-2000c.jpg" class="img-fluid">
+            <div class="col-md-6">
+                <div class="lg-12">
+                    <img src="{{ cdn_veaf }}/img/veaf-passion.png" class="img-fluid">
+                </div>
             </div>
-        </div>
-        <div class="col-md-6">
-            <div class="lg-12">
-                <img src="{{ cdn_veaf }}/img/veaf-passion.png" class="img-fluid">
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card border-primary mb-2" style="max-width: 20rem;">
-                <div class="card-header">KA-50</div>
-                <img src="{{ cdn_veaf }}/img/ka-50.jpg" class="img-fluid">
-            </div>
+            <div class="col-md-3">
+                <div class="card border-primary mb-2" style="max-width: 20rem;">
+                    <div class="card-header">KA-50</div>
+                    <img src="{{ cdn_veaf }}/img/ka-50.jpg" class="img-fluid">
+                </div>
 
-            <div class="card border-primary mb-2" style="max-width: 20rem;">
-                <div class="card-header">UH-1H</div>
-                <img src="{{ cdn_veaf }}/img/uh-1h.jpg" class="img-fluid">
+                <div class="card border-primary mb-2" style="max-width: 20rem;">
+                    <div class="card-header">UH-1H</div>
+                    <img src="{{ cdn_veaf }}/img/uh-1h.jpg" class="img-fluid">
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row mb-3">
-        <div class="col-lg-12">
-            <div class="bs-component">
-                <div class="jumbotron">
-                    <p class="text-center">
-                        La <b>Virtual European Air Force</b> est une association de personnes passionnées par
-                        l'aviation de combat. Cette passion se concrétise au travers de la pratique de la <b>simulation
-                            de vol</b>.
-                    </p>
-                    <p class="text-center">
-                        Tout comme dans la "réalité", le "vol", ne se cantonne pas à une prise de manche au
-                        milieu du ciel !
-                    </p>
-                    <p class="text-center">
-                        Formation, entraînement, qualification, préparation des opérations, analyse des
-                        missions, expérimentation, développement de nouveaux outils, améliorations du
-                        simulateur... jalonnent un grand nombre de nos activités.
-                    </p>
-                    <p class="text-center">
-                        Des activités qui animent la vie de notre groupe qui se veut partager des objectifs,
-                        valeurs et ambitions communes : la volonté de <b>progresser</b> ensemble, le
-                        <b>partage</b> et l'entraide, le respect, l'<b>excellence</b> dans la simulation et le
-                        combat avec une pointe acérée de combativité et volonté de vaincre.
-                    </p>
-                    <p class="text-center">
-                        La VEAF aujourd'hui, c'est près d'une quarantaine de personnes des quatres coins de la
-                        France et la Belgique, civils et militaires, toujours prêt à en découdre mais aussi à
-                        faire découvrir leur passion.
-                    </p>
-                    <p class="text-center">
-                        C'est une <b>aventure des temps modernes</b>... qui ne fait que commencer !
-                    </p>
+        <div class="row mb-3">
+            <div class="col-lg-12">
+                <div class="bs-component">
+                    <div class="jumbotron">
+                        <p class="text-center">
+                            La <b>Virtual European Air Force</b> est une association de personnes passionnées par
+                            l'aviation de combat. Cette passion se concrétise au travers de la pratique de la <b>simulation
+                                de vol</b>.
+                        </p>
+                        <p class="text-center">
+                            Tout comme dans la "réalité", le "vol", ne se cantonne pas à une prise de manche au
+                            milieu du ciel !
+                        </p>
+                        <p class="text-center">
+                            Formation, entraînement, qualification, préparation des opérations, analyse des
+                            missions, expérimentation, développement de nouveaux outils, améliorations du
+                            simulateur... jalonnent un grand nombre de nos activités.
+                        </p>
+                        <p class="text-center">
+                            Des activités qui animent la vie de notre groupe qui se veut partager des objectifs,
+                            valeurs et ambitions communes : la volonté de <b>progresser</b> ensemble, le
+                            <b>partage</b> et l'entraide, le respect, l'<b>excellence</b> dans la simulation et le
+                            combat avec une pointe acérée de combativité et volonté de vaincre.
+                        </p>
+                        <p class="text-center">
+                            La VEAF aujourd'hui, c'est près d'une quarantaine de personnes des quatres coins de la
+                            France et la Belgique, civils et militaires, toujours prêt à en découdre mais aussi à
+                            faire découvrir leur passion.
+                        </p>
+                        <p class="text-center">
+                            C'est une <b>aventure des temps modernes</b>... qui ne fait que commencer !
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <div class="row mb-4">
-        <div class="col-lg-12">
-            <p>
-                Pour les vols sur <b>Falcon BMS</b>, nous vous conseillons de rejoindre l'EC05, qui comprend les
-                meilleurs pilotes et instructeurs du domaine (normal, ils viennent de la VEAF ^^)
-            </p>
-            <a href="http://ec05.fr/EC05/"><img src="{{ cdn_veaf }}/img/ec05_logo.png" class="embed-responsive"></a>
+    <div class="container container-main pt-3 pb-3 mb-3">
+        <div class="row mb-4">
+            <div class="col-lg-12">
+                <p>
+                    Pour les vols sur <b>Falcon BMS</b>, nous vous conseillons de rejoindre l'EC05, qui comprend les
+                    meilleurs pilotes et instructeurs du domaine (normal, ils viennent de la VEAF ^^)
+                </p>
+                <a href="http://ec05.fr/EC05/"><img src="{{ cdn_veaf }}/img/ec05_logo.png" class="embed-responsive"></a>
+            </div>
         </div>
     </div>
-
-    <div class="row mb-1">
-        <div class="col-lg-12">
-            <img src="{{ cdn_veaf }}/img/uh-1h-boat.png" class="img-fluid">
+    <div class="container container-main pt-3 pb-3">
+        <div class="row mb-1">
+            <div class="col-lg-12">
+                <img src="{{ cdn_veaf }}/img/uh-1h-boat.png" class="img-fluid">
+            </div>
         </div>
     </div>
 {% endblock pageContent %}
