--- a/templates/perun/instance.html.twig
+++ b/templates/perun/instance.html.twig
@@ -3,41 +3,42 @@
 {% block title %}Hello DefaultController!{% endblock %}
 
 {% block pageContent %}
-<div class="container">
-    <div class="row mb-3">
-        <div class="page-header">
-            <h1 id="tables">Tables</h1>
-        </div>
-        <table class="table table-striped table-bordered table-hover">
-            <thead>
-            <tr>
-                <th>
-                    Joueur
-                </th>
-                <th>
-                    Ping
-                </th>
-                <th>
-                    Coalition
-                </th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for onlinePlayer in onlinePlayers %}
+    <div class="container container-main pt-3 pb-3 mb-3">
+        <div class="row mb-3 ml-1 mr-1">
+            <div class="page-header">
+                <h1 id="tables">Joueurs connectés au serveur {{ instance.id }}</h1>
+            </div>
+            <h3>Mission: {{ instance.mission }}</h3>
+            <table class="table table-striped table-bordered table-hover">
+                <thead>
                 <tr>
-                    <td>
-                        {{ onlinePlayer.player.lastName }}
-                    </td>
-                    <td>
-                        {{ onlinePlayer.ping }}
-                    </td>
-                    <td>
-                        {{ onlinePlayer.side }}
-                    </td>
+                    <th>
+                        Joueur
+                    </th>
+                    <th>
+                        Ping
+                    </th>
+                    <th>
+                        Coalition
+                    </th>
                 </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                {% for onlinePlayer in onlinePlayers %}
+                    <tr>
+                        <td>
+                            {{ onlinePlayer.player.lastName }}
+                        </td>
+                        <td>
+                            {{ onlinePlayer.ping }}
+                        </td>
+                        <td>
+                            {{ onlinePlayer.side }}
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
-</div>
 {% endblock pageContent %}
