fix Association span

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,7 +47,7 @@
                             <a href="https://community.veaf.org/" class="nav-link"><span class="fa fa-envelope"></span> Forum</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="association"><span class="fa fa-hotel"> Association
+                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="association"><span class="fa fa-hotel"></span> Association
                                 <span class="caret"></span></a>
                             <div class="dropdown-menu" aria-labelledby="association">
                                 <a class="dropdown-item" href="/association/presentation-association">Présentation</a>
