--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,138 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>{% block title %}Virtual European Air Force - VEAF: simulation de vol de combat - Falcon 4 - Black Shark - ROF{% endblock title %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css"
-          integrity="sha512-P5MgMn1jBN01asBgU0z60Qk4QxiXo86+wlFahKrsQf37c9cro517WzVSPPV1tDKzhku2iJ2FVgL67wG03SGnNA=="
-          crossorigin="anonymous"/>
-    <link rel="stylesheet" href="{{ cdn_veaf }}/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/custom.css">
-    <link rel="icon" type="image/ico" href="/img/favicon.ico"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-            integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
-    <!--    &lt;!&ndash; Global Site Tag (gtag.js) - Google Analytics &ndash;&gt;-->
-    <!--    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23019901-1"></script>-->
-    <!--    <script>-->
-    <!--        window.dataLayer = window.dataLayer || [];-->
-
-    <!--        function gtag() {-->
-    <!--            dataLayer.push(arguments);-->
-    <!--        }-->
-
-    <!--        gtag('js', new Date());-->
-
-    <!--        gtag('config', 'UA-23019901-1');-->
-    <!--    </script>-->
+    {% block head %}
+        <meta charset="utf-8">
+        <title>{% block title %}Virtual European Air Force - VEAF: simulation de vol de combat - Falcon 4 - Black Shark - ROF{% endblock title %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet"
+              href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css"
+              integrity="sha512-P5MgMn1jBN01asBgU0z60Qk4QxiXo86+wlFahKrsQf37c9cro517WzVSPPV1tDKzhku2iJ2FVgL67wG03SGnNA=="
+              crossorigin="anonymous"/>
+        <link rel="icon" type="image/ico" href="/img/favicon.ico"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+              integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+              crossorigin="anonymous"/>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+                integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+                crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.6.0/umd/popper.min.js" integrity="sha512-BmM0/BQlqh02wuK5Gz9yrbe7VyIVwOzD1o40yi1IsTjriX/NGF37NyXHfmFzIlMmoSIBXgqDiG1VNU6kB5dBbA==" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+        {% if libKilikTable is defined and libKilikTable == true %}
+        <script src="/bundles/kiliktable/js/KilikTable.js"></script>
+        {% endif %}
+    {% endblock head %}
 </head>
-<body>
+<body{% block bodyAttributes %}{% endblock bodyAttributes %}>
 {% block body %}
     {% block header %}
-        <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
-            <div class="container">
-                <a href="/" class="navbar-brand"><img src="{{ cdn_veaf }}/img/site-logo.png" class="logo-navbar"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a href="/" class="nav-link"><span class="fa fa-newspaper"></span> Les nouvelles</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="https://community.veaf.org/" class="nav-link"><span class="fa fa-envelope"></span> Forum</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="association"><span class="fa fa-hotel"></span> Association
-                                <span class="caret"></span></a>
-                            <div class="dropdown-menu" aria-labelledby="association">
-                                <a class="dropdown-item" href="/association/presentation-association">Présentation</a>
-                                <!--                        <div class="dropdown-divider"></div>-->
-                                <a class="dropdown-item" href="/association/le-bureau">Le bureau</a>
-                                <a class="dropdown-item" href="/association/status">Les statuts</a>
-                                <a class="dropdown-item" href="/association/reglement-interieur">Règlement intérieur</a>
-                                <a class="dropdown-item" href="https://community.veaf.org/topic/21/nous-rejoindre">Rejoindre
-                                    l'association</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="webstv"><span class="fa fa-tv"></span> Webs TV
-                                <span class="caret"></span></a>
-                            <div class="dropdown-menu" aria-labelledby="webstv">
-                                <a class="dropdown-item" href="http://www.youtube.com/user/AssociationVEAF/">
-                                    <span class="fa fa-youtube"></span> Chaîne Youtube VEAF
-                                </a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"
-                               id="webstv"><span class="fa fa-server"></span> Serveurs<span
-                                        class="caret"></span></a>
-                            <div class="dropdown-menu" aria-labelledby="webstv">
-                                <a class="dropdown-item" href="{{ path("perun_index") }}">
-                                    Serveurs DCS
-                                </a>
-                            </div>
-                        </li>
-                        {% if app.user %}
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"
-                                   id="webstv"><span class="fa fa-user"></span> {{ app.user.nickname }}<span
-                                            class="caret"></span></a>
-                                <div class="dropdown-menu" aria-labelledby="webstv">
-                                    <a class="dropdown-item" href="{{ path("app_logout") }}">
-                                        Déconnexion
-                                    </a>
-                                </div>
-                            </li>
-                        {% else %}
-                            <li class="nav-item">
-                                <a href="{{ path("app_login") }}" class="nav-link"><span class="fa fa-sign-in-alt"></span> Connexion</a>
-                            </li>
-                        {% endif %}
-                    </ul>
-                </div>
-            </div>
-        </div>
     {% endblock header %}
 
     {% block pageContent %}
-        <div class="container container-main pt-3">
-            place holder
-        </div>
     {% endblock pageContent %}
 
     {% block footer %}
-        <div class="container container-main pt-2 mt-5">
-            <footer id="footer">
-                <div class="row mb-2">
-                    <div class="col-lg-12 text-center">
-                        Sauf précision contraire, le contenu de ce site est mis à disposition selon les termes<br>
-                        de la
-                        <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/fr/">
-                            Licence Creative Commons Attribution - Pas d’Utilisation Commerciale - Partage dans les
-                            Mêmes Conditions 3.0 France.
-                        </a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-3">
-                        © 2004 - 2021 VEAF
-                    </div>
-                    <div class="col-sm-6">
-                        &nbsp;
-                    </div>
-                    <div class="col-sm-3 text-right">
-                        Virtual European Air Force
-                    </div>
-                </div>
-            </footer>
-        </div>
     {% endblock footer %}
+
+    {% block javascript %}
+        {% if libKilikTable is defined and libKilikTable == true %}
+        <script>
+            $(document).ready(function () {
+                var loadKiliktables = function () {
+                    var $kilikTables = $("[data-kiliktable-id]");
+                    if ($kilikTables && $kilikTables.length > 0) {
+                        $kilikTables.each(function (index, currentTable) {
+                            var $currentTable = $(currentTable);
+                            var id = $currentTable.data("kiliktable-id");
+                            if (id.length > 0) {
+                                    console.log(id);
+                                var path = $currentTable.data("kiliktable-path");
+                                var options = $currentTable.html();
+                                new KilikTableFA(id, path, JSON.parse(options)).init();
+                            }
+                        });
+                    }
+                }
+                loadKiliktables();
+            });
+        </script>
+        {% endif %}
+    {% endblock %}
 {% endblock body %}
 </body>
 </html>
