--- a/templates/admin/user/list.html.twig
+++ b/templates/admin/user/list.html.twig
@@ -1,5 +1,7 @@
-{% set libKilikTable=true %}
 {% extends 'admin/layout.html.twig' %}
+{% set libKilikTable=true %}
+{% set section="admin" %}
+{% set subSection="user" %}
 
 {% block pageContent %}
     <div class="col-lg-6 mb-4">
