--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.html.twig' %}
 
-{% block title %}{{ parent() }} - Accueil{% endblock %}
+{% block title %}{{ parent() }}: simulation de vol de combat - Falcon 4 - Black Shark - ROF - Accueil{% endblock %}
 
 {% block pageContent %}
     <div class="container container-main pt-3 pb-3 mb-3">
