--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -34,9 +34,13 @@
 
                             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-                            <button class="btn btn-lg btn-primary" type="submit">
+                            <button class="btn btn-lg btn-primary form-control" type="submit">
                                 <i class="fa fa-sign-in-alt"></i> Connecter
                             </button>
+
+                            <p class="mt-3">
+                                Pas encore inscrit ? <a href="{{ path('register') }}">c'est ici que ça se passe</a>
+                            </p>
                         </form>
                     </div>
                 </div>
