--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -41,6 +41,9 @@
                             <p class="mt-3">
                                 Pas encore inscrit ? <a href="{{ path('register') }}">c'est ici que ça se passe</a>
                             </p>
+                            <p class="mt-3">
+                                Mot de passe perdu ? <a href="{{ path('reset_password') }}">récupérer mon compte</a>
+                            </p>
                         </form>
                     </div>
                 </div>
