--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -16,6 +16,7 @@
                     <div class="card-body">
                         {{ form_start(form) }}
                         {{ form_rest(form) }}
+                        {{ form_errors(form) }}
                         <button class="btn btn-lg btn-primary" type="submit">
                             <i class="fa fa-pen"></i> S'inscrire
                         </button>
